@startuml UML Despegar
package Despegar{
    class User{
        - id: int
        - first_name: String
        - last_name: String
        - password: String
        - email: String
    }

    class Purchase{
        id: int
        user: User
    }

    class Package{
        id: int
        hotel: Hotel
        vehicle: Vehicle
        flight: Flight
        price: float
    }

    abstract class Product{
        status: Int
    }

    class Flight{
        id: int
        flight_type: String
        code_number: int
        from: Airport
        to: Airport
        hours: int
        date: Date
        turn: boolean
        dateBack: Date
        price: float
    }

    class Vehicle{
        id: int
        patent: int
        brand: String
        price: float
    }

    class Hotel{
        id: int
        name: String
        hotel_type: String
        star: int
        address: String
        price: float
    }

    class Airport{
        id: int
        name: String
        province: Province
    }

    class Country{
        id: int
        name: String
    }

    class Province{
        id: int
        name: String
        country: Country
    }

    User "1" -right-> "1-n" Purchase
    Purchase "1-n" -right-> "1" Package
    Package --> Flight
    Package --> Vehicle
    Package --> Hotel
    Flight --> Airport
    Airport "1" -right-> "1" Province
    Province "1-n" -right-> "1" Country 

    Flight -up-|> Product
    Vehicle -up-|> Product
    Hotel -up-|> Product


}


@enduml